--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,25 +11,30 @@
 
   <hr>
 
-  <div *ngIf="!loading; else loadingBlock">
-    <div *ngIf="todos.length; else noTodos">
-      <div class="card" *ngFor="let todo of todos">
-        <p>
-          <span [class.completed]="todo.completed">{{ todo.title | titlecase }}</span>
-          <span>
-            <button class="btn btn-danger" (click)="removeTodo(todo.id)">Удалить</button>
-            <button class="btn" [disabled]="todo.completed">Завершить</button>
-          </span>
-        </p>
+  <p *ngIf="error; else todosBlock" class="error">{{ error }}</p>
+
+  <ng-template #todosBlock>
+    <div *ngIf="!loading; else loadingBlock">
+      <div *ngIf="todos.length; else noTodos">
+        <div class="card" *ngFor="let todo of todos">
+          <p>
+            <span [class.completed]="todo.completed">{{ todo.title | titlecase }}</span>
+            <span>
+              <button class="btn btn-danger" (click)="removeTodo(todo.id)">Удалить</button>
+              <button class="btn" [disabled]="todo.completed" (click)="completeTodo(todo.id)">Завершить</button>
+            </span>
+          </p>
+        </div>
       </div>
+  
+      <ng-template #noTodos>
+        <p>Elements are not here!</p>
+      </ng-template>
     </div>
-
-    <ng-template #noTodos>
-      <p>Elements are not here!</p>
+  
+    <ng-template #loadingBlock>
+      <p>Loading...</p>
     </ng-template>
-  </div>
-
-  <ng-template #loadingBlock>
-    <p>Loading...</p>
   </ng-template>
+
 </div>
